# Revolution-trading-pros

./: .editorconfig  .env.example  .gitignore  .mcp.json  .npmrc  .railwayignore  .windsurfrules  100_100_ACHIEVED.md  404-FINDINGS.md  404-INVESTIGATION.md  500_ERROR_INVESTIGATION_REPORT.md  500_ERROR_RESOLUTION.md  ACCOUNT_PAGES_STATUS.md  ADMIN_AND_CMS_AUDIT_2026-04-25.md  ADMIN_API_DEEP_INVESTIGATION.md  ADMIN_FAILURE_DATA.md  ADMIN_ROUTES_AUDIT.md  ADMIN_SYSTEM_COMPLETE.md  ADMIN_SYSTEM_DISCOVERY.md  ADMIN_TOOLBAR_GUIDE.md  ADMIN_TOOLBAR_REACTIVE_FIX.md  AGENTS.md  AI_DASHBOARD_GUIDE.md  ALL_FIXES_FINAL.md  ALL_INTEGRATIONS_COMPLETE.md  ALL_PAGES_ARCHIVE.sh  ALL_PAGES_COMPLETE.txt  ANALYTICS_ENHANCEMENTS.md  ANALYTICS_QUICK_START.md  ANALYTICS_SYSTEM.md  API-KEYS-REPORT.md  AUDIT_FIXES_SUMMARY.md  AUDIT_FIX_PLAN.md  AUDIT_FIX_SUMMARY.md  AUDIT_REPORT.md  AUDIT_REPORT_2025-11-27.md  AUDIT_REPORT_2025-12-16.md  AUDIT_STATUS_REPORT.md  AUTH_FIX_RESULT.md  AUTH_L7_AUDIT_COMPLETE.md  (+280 more)
api/: .deployment-trigger  .dockerignore  .env.example  .gitignore  BACKEND_INVESTIGATION_REPORT.md  COMPLETE_DEPLOYMENT.sh  COMPREHENSIVE_FIX_REPORT.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_WATCHLIST.md  DIAGNOSTIC_REPORT.md  Dockerfile  FLY_DEPLOYMENT_GUIDE.md  LEGACY_CMS_FORENSIC_REPORT.md  PRODUCTION_ENDPOINTS.md  README.md  RUNNING_MIGRATIONS.md  VERIFICATION_REPORT.md  deny.toml  fix_password.sh  fly.toml  run-migrations.js
api-rust/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  wrangler.toml
api-rust/src/: config.rs  error.rs  lib.rs  utils.rs
api/.cargo/: audit.toml  config.toml
api/.sqlx/: query-02b789ae5d34114375775af8372fdc5ee5ce1d20eff1011c18d220f93bf5b211.json  query-07abe0c55cdda520e2916b97c6bad04dc1dc34c4645afa11415036b5146db083.json  query-194c3433b6350295d95485bbb0babadd63173d5cb76557ef798efa8c1b6aeab3.json  query-26a7a17451e3e5a1e81af8de9794cb8be33612442a52f0271c0aa4944e8a2be3.json  query-32faaffa05eb6e457581840944425c47504cf91601d52ec89decb58122072820.json  query-3308fd2e463da2f80aae8a32273156744df377e393c6156be32e7d92f4eacfbb.json  query-388f39e0bdab4d2f6f42ac9ee44ab36e04f9172a67015878d27ad13258ef4c86.json  query-3b526b4f38218d5056710c97ed07ba73ba60d0e0b65e7b882927fe928d9261c5.json  query-4a2d96415974b4c5badc2ed51ff9b6bf9415bc3eb2da0e464e639699b7308a5d.json  query-53a2619492e3e3a6e9d6a2d6146879568222b1937745d771ffeba5faf41abb15.json  query-582d783bd1f52ecc2763e98bc9462d6849a0e69d10fabe9997e8209f94f5143d.json  query-78122192134a8b51a42ec952d7036bc2690536cfccdef9fe6227a796b0301c4e.json  query-8bca6047fd1f73b585c370e824ece302c4cd51ffd070e889e74f88b29fa44a4b.json  query-8f1de99ceeaf1334ab46b597104e94c3949abb4b1c9dee1a83fd51e0b4a9f451.json  query-8f3917f35d64fd48f6ef32a2aade90715a39def71b8bd5681df6a846cdc63f16.json  query-9a9e7df2e477aab7c857ca98de0cc2d7fdcc713ea5a00fcb9f129d33550f1682.json  query-b6f4c3c5af7f39ace20561d571f5c371fb529fd9b341cb9164bf7a9c7db0b559.json  query-b84946dc59a4e8dcc40031d41eb3b2f94a711f63a869f58a4836fc76ff88ba88.json  query-bc3bdd760f461282f7eb45817e2aa47e478615d99855c591b231b7aaaf8376bb.json  query-bcfea487a9944f331d2759e1f8c2f3302ae0e14506ecc896127682aeb2d19fb0.json  query-c69be48b5fe1579ea0a4f8ec83065e15c4a8d77d08511a3a99d7335527c47650.json  query-c7e91350ea7962364a45ee109dba4f1d4a28dac4b3c132918238e65dd2227d5d.json  query-d8f11067d626c035f7e4f373b0099406bd1c2e7e9ee1671d02c06f9276401ec8.json  query-e205de277c772c0b5b9f22c166f27e095dc217b3c2becafd8e482793b8df666b.json  query-e83b2ef963801c4f0b8f14039a83e7b29dceaf1fa572b7c37cb62794e44eeac0.json  query-ee5b9c987639ceeb4d841ca3717d807fb7384c844286cefee793dffca358752f.json
api/migrations/: 000_bootstrap_users.sql  001_initial.sql  001_initial_schema.sql  002_fix_password_column.sql  003_add_jobs_run_at.sql  003_fix_jobs_schema.sql  004_add_mfa_enabled.sql  007_email_verification_standalone.sql  008_seed_membership_plans.sql  009_add_performance_indexes.sql  010_fix_coupons_schema.sql  011_seed_test_coupon.sql  012_add_redirects_table.sql  013_trading_room_schedules.sql  014_advanced_cms_features.sql  015_consolidated_schema.sql  016_fix_course_schema.sql  016_user_favorites_and_stats.sql  017_fix_schema_mismatches.sql  018_explosive_swings_complete.sql  019_subscription_variants.sql  020_add_runner_stop_column.sql  021_add_developer_user.sql  021_add_room_slug_to_bunny_uploads.sql  021_bootstrap_developer.sql  022_position_invalidate_fields.sql  023_custom_cms_implementation.sql  024_advanced_cms_features.sql  025_blog_editor_enhancements.sql  026_cms_ai_assist_history.sql  027_cms_v2_enterprise_features.sql  028_user_favorites_and_stats.sql  029_cms_reusable_blocks_schema_fix.sql  030_room_search_indexes.sql  031_analytics_functions.sql  032_search_function.sql  033_oauth_providers.sql  035_ict7_member_system_complete.sql  036_room_resources_ict7_complete.sql  037_forms_ict7_enhancements.sql  (+53 more)
api/scripts/: deploy.sh  fix-password.rs  seed-local-admin.sh
api/src/: lib.rs  main.rs
api/tests/: admin_courses_test.rs  admin_indicators_test.rs  admin_member_management_test.rs  admin_members_test.rs  admin_orders_test.rs  admin_page_layouts_test.rs  admin_popups_test.rs  admin_test.rs  admin_videos_test.rs  analytics_test.rs  auth_test.rs  bunny_upload_test.rs  categories_test.rs  checkout_test.rs  client_ip_test.rs  cms_ai_assist_test.rs  cms_assets_test.rs  cms_datasources_test.rs  cms_delivery_test.rs  cms_global_components_test.rs  cms_presets_test.rs  cms_reusable_blocks_test.rs  cms_revisions_test.rs  cms_scheduling_test.rs  cms_seo_test.rs  cms_v2_enterprise_test.rs  cms_v2_test.rs  connections_test.rs  consent_test.rs  contacts_test.rs  coupons_test.rs  courses_admin_test.rs  credential_resolver_test.rs  crm_test.rs  e2e_test.sh  email_templates_test.rs  explosive_swings_tests.rs  export_test.rs  favorites_test.rs  forms_test.rs  (+43 more)
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION_ANALYSIS.md  README.md  VALIDATION_REPORT.md  fly.toml
backend-rust/.cargo/: audit.toml
backend-rust/src/: lib.rs  (+1 more)
(+6280 files in other folders)
