[package]
name = "revolution-api"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Revolution Trading Pros API - Rust + Cloudflare Workers"
authors = ["Revolution Trading Pros"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers (latest v0.7.1 - Dec 2025)
worker = "0.7"

# Async Runtime
futures = "0.3"

# HTTP types (for axum integration)
http = "1.2"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication (WASM compatible - no ring/openssl)
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
base64 = "0.22"
hex = "0.4"
bcrypt = { version = "0.17", default-features = false, features = ["alloc"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind", "std"] }
thiserror = "2.0"
slug = "0.1"

# WASM compatibility
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Request", "Response", "Headers", "FormData", "File", "Blob"] }
console_error_panic_hook = "0.1"

# URL encoding
urlencoding = "2.1"
serde_urlencoded = "0.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
