[package]
name = "revolution-api"
version = "0.1.0"
edition = "2021"
description = "Revolution Trading Pros API - Rust + Axum"
authors = ["Revolution Trading Pros"]
# Proprietary workspace member; never published to a registry.
publish = false

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.11", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "set-header"] }
lazy_static = "1.4"
html-escape = "0.2"

# Async Runtime
tokio = { version = "1.45", features = ["full"] }

# Database (Fly.io PostgreSQL) - use native-tls to avoid rustls crypto provider issues
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }

# Redis (Upstash) - use native-tls for simpler TLS handling
redis = { version = "0.29", features = ["tokio-comp", "connection-manager", "tls-native-tls", "tokio-native-tls-comp"] }

# S3/R2 Storage (December 2025 versions)
aws-sdk-s3 = "1.75"
aws-config = "1.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Crypto
jsonwebtoken = "9.2"
base64 = "0.22"  # ICT 7: OAuth PKCE and token encoding
base32 = "0.5"   # ICT 7: TOTP secret encoding
argon2 = "0.5"
bcrypt = "0.15"  # Laravel bcrypt compatibility
rand = "0.8"
hmac = "0.12"
sha1 = "0.10"    # ICT 7: TOTP HMAC-SHA1 (RFC 6238)
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"  # ICT L11+ Security: Constant-time comparison
md5 = "0.7"  # For Bunny.net signature generation

# CSV Export - ICT 7+ Phase 4 Export Functionality
csv = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"  # ICT 11+: SEO content analysis regex patterns
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
slug = "0.1"
urlencoding = "2.1"  # URL encoding for email links

# SSE/Real-time - ICT 11+ CMS Features
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"

# HTTP Client (for external APIs)
# NOTE: this repo calls Stripe directly via reqwest (see services/stripe.rs);
# the `async-stripe` crate is intentionally NOT a dep.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Search (Meilisearch) - Use updated SDK to avoid unmaintained dependencies
meilisearch-sdk = "0.28"

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
# Testing
axum-test = "14"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
