[package]
name = "revolution-trading-pros-api"
version = "1.0.0"
edition = "2021"
rust-version = "1.84"
authors = ["Revolution Trading Pros <dev@revolutiontradingpros.com>"]
description = "High-performance Rust/Axum API backend for Revolution Trading Pros"
license = "Proprietary"

[dependencies]
# Web Framework - Axum 0.8 (Latest January 2026)
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "limit",
    "request-id",
    "timeout",
    "catch-panic"
] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Async Runtime
tokio = { version = "1.43", features = ["full", "tracing"] }

# Database - SQLx with PostgreSQL
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Authentication & Security
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# HTTP Client (for external APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Stripe
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper-rustls"] }

# Password validation
passwords = "3.1"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder"] }

# Async traits
async-trait = "0.1"

# Once cell for lazy statics
once_cell = "1.19"

# Regex
regex = "1.10"

# URL parsing
url = "2.5"

# Base64
base64 = "0.22"

# Hex encoding
hex = "0.4"

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "3.0", features = ["derive"] }
pretty_assertions = "1.4"
rstest = "0.21"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
